# Universe

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
assets/shaders/: debug-frag.glsl  debug-vert.glsl  default-frag.glsl  default-vert.glsl  light-frag.glsl  light-vert.glsl  skybox-vert.glsl
src/: main.cpp
src/engine/: Body.cpp  Body.h  Grid.cpp  Grid.h  Skybox.cpp  Skybox.h
src/renderer/: Camera.cpp  Camera.h  LineRenderer.cpp  LineRenderer.h  Shader.cpp  Shader.h
src/renderer/gl/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/utils/: File.cpp  File.h  Math.h
